# AstroOdyssey

./: Cargo.toml  README.md
.github/workflows/: auto_assign.yml
src/: config.rs  lib.rs  main.rs  map.rs  systems.rs  utils.rs
src/droids/: droid.rs
src/main_menu/: mod.rs  systems.rs
src/sim/: mod.rs  systems.rs
src/sim/base/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/sim/droids/: components.rs  mod.rs  systems.rs
src/sim/droids/carrier/: components.rs  mod.rs  systems.rs
src/sim/droids/explorer/: components.rs  mod.rs  systems.rs
src/sim/droids/healer/: components.rs  mod.rs  systems.rs
src/sim/droids/lumberjack/: components.rs  mod.rs  systems.rs
src/sim/droids/miner/: components.rs  mod.rs  systems.rs
src/sim/map/: components.rs  events.rs  mod.rs  systems.rs
src/sim/resources/: components.rs  events.rs  mod.rs  systems.rs
src/sim/resources/iron/: components.rs  events.rs  mod.rs  systems.rs
src/sim/resources/tree/: components.rs  events.rs  mod.rs  systems.rs
