[package]
name = "astro-odyssey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove the features before production
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_pancam = "0.11"
noise = "0.9.0"
rand = "0.8.5"
bevy-inspector-egui = "0.23"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3